完善服务发现和注册模块2